--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.9"
   },
-  "proxy":"http://localhost:8080"
+  "proxy":"https://randomservice.com"
 }
